--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,16 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  line-height: 1.6;
+  font-size: 18px;
+  color: #000000;
+  background: #ffffff;
+}
+
+[data-theme="dark"],
+[data-theme="dark"] body {
+  background: #222831;
+  color: #ffffff;
 }
 
 a {
@@ -11,6 +21,12 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+a:hover {
+  color: rgb(241, 77, 93);
+  text-decoration: underline;
+}
+
+img {
+  max-width: 100%;
+  display: block;
 }
