--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,10 @@ body {
 }
 
 [data-theme="dark"],
-[data-theme="dark"] body {
-  background: #222831;
+[data-theme="dark"] body,
+main,
+nav {
+  background-color: #222831;
   color: #ffffff;
 }
 
@@ -23,7 +25,6 @@ a {
 
 a:hover {
   color: rgb(241, 77, 93);
-  text-decoration: underline;
 }
 
 img {
